connect form to index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="nav-menu">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Passes</a></li>
-                <li><a href="#">Track Pass</a></li>
+                <li><a href="form.html">Track Pass</a></li>
                 <li><a href="#">Commute</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
