--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="logo">Click2Pass</div>
             <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#apply" class="active">Apply Pass</a></li>
                 <li><a href="#track">Track Pass</a></li>
