Created page and css

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Passes</a></li>
-                <li><a href="form.html">Track Pass</a></li>
-                <li><a href="#">Commute</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="pages/form.html">Apply Pass</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
             </ul>
             <div class="nav-actions">
                 <button class="btn-login">Login</button>
@@ -39,7 +37,7 @@
                     <i class="fas fa-user-circle"></i>
                 </div>
                 <div class="user-info">
-                    <h3>Good Evening, <span>siddhi</span></h3>
+                    <h3>Good Evening, <span>Hanisha</span></h3>
                     <p class="eco-badge"><i class="fas fa-leaf"></i> 10 g CO₂e saved</p>
                 </div>
             </div>
