--- a/pages/form.html
+++ b/pages/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apply for Bus Pass - ORIX EXPRESS</title>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="../css/form.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -12,11 +12,11 @@
         <div class="nav-container">
             <div class="logo">Click2Pass</div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <!-- <li><a href="#services">Services</a></li> -->
                 <li><a href="#apply" class="active">Apply Pass</a></li>
-                <li><a href="#track">Track Pass</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!-- <li><a href="#track">Track Pass</a></li> -->
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <button class="login-btn">Login</button>
         </div>
