--- a/index.html
+++ b/index.html
@@ -10,27 +10,24 @@
 </head>
 <body>
 
-    <!-- Top Navigation Bar -->
     <nav class="top-navbar">
         <div class="nav-container">
             <div class="logo">
                 <h2>Click<span>2Pass</span></h2>
             </div>
             <ul class="nav-menu">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="../index.html" class="active">Home</a></li>
                 <li><a href="pages/form.html">Apply Pass</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
             <div class="nav-actions">
-                <button class="btn-login">Login</button>
+                <a href="pages/login.html" class="btn-login">Login</a>
             </div>
         </div>
     </nav>
 
-    <!-- Main Container -->
     <div class="main-layout">
 
-        <!-- Sidebar (Optional) -->
         <aside class="sidebar">
             <div class="user-profile">
                 <div class="avatar">
@@ -50,10 +47,8 @@
             </ul>
         </aside>
 
-        <!-- Main Content -->
         <main class="content">
 
-            <!-- Search Bar -->
             <section class="search-bar">
                 <div class="search-wrapper">
                     <i class="fas fa-search"></i>
@@ -62,7 +57,6 @@
                 </div>
             </section>
 
-            <!-- Promo Banner -->
             <section class="promo-banner">
                 <div class="promo-card">
                     <div class="promo-icon"><i class="fas fa-leaf"></i></div>
@@ -75,7 +69,6 @@
                 </div>
             </section>
 
-            <!-- Passes & Tickets -->
             <section class="passes-section">
                 <h2 class="section-title">Passes & Tickets</h2>
                 <div class="passes-grid">
@@ -101,7 +94,6 @@
                 </div>
             </section>
 
-            <!-- Commute Options -->
             <section class="commute-section">
                 <h2 class="section-title">Commute Options Available</h2>
                 <div class="commute-grid">
@@ -125,7 +117,6 @@
                 </div>
             </section>
 
-            <!-- Travel Outstation -->
             <section class="outstation-section">
                 <h2 class="section-title">Travel Outstation</h2>
                 <div class="outstation-placeholder">
@@ -136,7 +127,6 @@
         </main>
     </div>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-col">
