--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
@@ -18,13 +17,12 @@
             <ul class="nav-menu">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="form.html">Apply Pass</a></li>
-                <li><a href="#" class="active">Contact</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
-            <button class="login-btn">Login</button>
+            <!-- <button class="login-btn">Login</button> -->
         </div>
     </nav>
 
-    <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-content">
             <h1>Get in Touch</h1>
@@ -32,9 +30,7 @@
         </div>
     </section>
 
-    <!-- Main Container -->
     <div class="main-container">
-        <!-- Contact Form -->
         <div class="contact-form-section">
             <div class="form-card">
                 <div class="form-header">
@@ -85,9 +81,7 @@
             </div>
         </div>
 
-        <!-- Contact Info Cards -->
         <div class="contact-info-section">
-            <!-- Office Location -->
             <div class="info-card">
                 <div class="info-icon">
                     <i class="fas fa-map-marker-alt"></i>
@@ -97,7 +91,6 @@
                 <a href="#" class="info-link">Get Directions <i class="fas fa-arrow-right"></i></a>
             </div>
 
-            <!-- Phone -->
             <div class="info-card">
                 <div class="info-icon">
                     <i class="fas fa-phone-alt"></i>
@@ -107,7 +100,6 @@
                 <a href="tel:18001234567" class="info-link">Call Now <i class="fas fa-arrow-right"></i></a>
             </div>
 
-            <!-- Email -->
             <div class="info-card">
                 <div class="info-icon">
                     <i class="fas fa-envelope"></i>
@@ -117,7 +109,6 @@
                 <a href="mailto:support@click2pass.com" class="info-link">Send Email <i class="fas fa-arrow-right"></i></a>
             </div>
 
-            <!-- Live Chat -->
             <div class="info-card highlight">
                 <div class="info-icon">
                     <i class="fas fa-comments"></i>
@@ -131,8 +122,7 @@
         </div>
     </div>
 
-    <!-- FAQ Section -->
-    <section class="faq-section">
+    <section class="faq-section" id="faq-section">
         <div class="faq-container">
             <div class="faq-header">
                 <h2>Frequently Asked Questions</h2>
@@ -191,7 +181,6 @@
         </div>
     </section>
 
-    <!-- Map Section -->
     <section class="map-section">
         <div class="map-container">
             <h2>Find Us on Map</h2>
@@ -203,7 +192,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-col">
@@ -229,8 +217,8 @@
                 <h4>Support</h4>
                 <ul>
                     <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">FAQs</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="#faq-section">FAQs</a></li>
                     <li><a href="#">Track Pass</a></li>
                 </ul>
             </div>
