Edited login and form

--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
                 
                 <a href="#" class="forgot-link">Forgot Password?</a>
                 
-                <a href="form.html" class="btn-full">
+                <a href="#" class="btn-full">
                     <i class="fas fa-sign-in-alt"></i> Login
                 </a>
             </form>
