created new files and changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Click2Pass – Instant Bus Passes & Tickets</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/style1.css" />
+    <link rel="stylesheet" href="css/index-style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
@@ -16,8 +17,10 @@
                 <h2>Click<span>2Pass</span></h2>
             </div>
             <ul class="nav-menu">
-                <li><a href="../index.html" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="pages/form.html">Apply Pass</a></li>
+                <li><a href="pages/renew-pass.html">Renew Pass</a></li>
+                <li><a href="pages/my-passes.html">My Passes</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
             <div class="nav-actions">
@@ -26,106 +29,62 @@
         </div>
     </nav>
 
-    <div class="main-layout">
-
-        <aside class="sidebar">
-            <div class="user-profile">
-                <div class="avatar">
-                    <i class="fas fa-user-circle"></i>
-                </div>
-                <div class="user-info">
-                    <h3>Good Evening, <span>Hanisha</span></h3>
-                    <p class="eco-badge"><i class="fas fa-leaf"></i> 10 g CO₂e saved</p>
-                </div>
-            </div>
-            <ul class="sidebar-menu">
-                <li><a href="#" class="active"><i class="fas fa-home"></i> Dashboard</a></li>
-                <li><a href="#"><i class="fas fa-ticket-alt"></i> My Passes</a></li>
-                <li><a href="#"><i class="fas fa-history"></i> History</a></li>
-                <li><a href="#"><i class="fas fa-wallet"></i> Wallet</a></li>
-                <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
-            </ul>
-        </aside>
-
-        <main class="content">
-
-            <section class="search-bar">
-                <div class="search-wrapper">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Search route, stop, or pass ID..." />
-                    <button class="fav-btn"><i class="fas fa-heart"></i></button>
-                </div>
-            </section>
-
-            <section class="promo-banner">
-                <div class="promo-card">
-                    <div class="promo-icon"><i class="fas fa-leaf"></i></div>
-                    <div class="promo-text">
-                        <h3>CO₂e Savings</h3>
-                        <p>Save CO₂e & Get Featured on Leaderboard</p>
-                    </div>
-                    <button class="promo-cta">Check Now</button>
-                    <button class="promo-close"><i class="fas fa-times"></i></button>
-                </div>
-            </section>
-
-            <section class="passes-section">
-                <h2 class="section-title">Passes & Tickets</h2>
-                <div class="passes-grid">
-                    <div class="pass-card">
-                        <div class="pass-icon"><i class="fas fa-id-card"></i></div>
-                        <h4>Daily Pass</h4>
-                        <p>Valid for 24 hours</p>
-                        <span class="price">₹49</span>
-                    </div>
-                    <div class="pass-card">
-                        <div class="pass-icon"><i class="fas fa-calendar-week"></i></div>
-                        <h4>Weekly Pass</h4>
-                        <p>7 days unlimited</p>
-                        <span class="price">₹299</span>
-                    </div>
-                    <div class="pass-card highlight">
-                        <div class="pass-icon"><i class="fas fa-ticket-alt"></i></div>
-                        <h4>Monthly Pass</h4>
-                        <p>Best value • 30 days</p>
-                        <span class="price">₹899</span>
-                        <span class="badge">Most Popular</span>
-                    </div>
-                </div>
-            </section>
-
-            <section class="commute-section">
-                <h2 class="section-title">Commute Options Available</h2>
-                <div class="commute-grid">
-                    <div class="commute-card">
-                        <i class="fas fa-bus"></i>
-                        <p>City Bus</p>
-                    </div>
-                    <div class="commute-card">
-                        <i class="fas fa-bus-alt"></i>
-                        <p>AC Bus</p>
-                    </div>
-                    <div class="commute-card cash">
-                        <span class="cash-label">Cash</span>
-                        <i class="fas fa-taxi"></i>
-                        <p>Direct Ride</p>
-                    </div>
-                    <div class="commute-card">
-                        <i class="fas fa-train"></i>
-                        <p>Metro Link</p>
-                    </div>
-                </div>
-            </section>
-
-            <section class="outstation-section">
-                <h2 class="section-title">Travel Outstation</h2>
-                <div class="outstation-placeholder">
-                    <p>Intercity bus booking coming soon...</p>
-                </div>
-            </section>
-
-        </main>
+    <div class="hero-section">
+        <div class="hero-content">
+            <h1>Seamless Travel. Instant Passes.</h1>
+            <p>Get your daily, weekly, and monthly bus passes in just a few clicks. Welcome to Click2Pass, your digital solution for easy commuting.</p>
+            <a href="pages/form.html" class="hero-cta">Apply for Your Pass Now</a>
+        </div>
     </div>
+
+    <section class="features-section">
+        <h2>Why Choose Click2Pass?</h2>
+        <div class="features-grid">
+            <div class="feature-card">
+                <i class="fas fa-bolt"></i>
+                <h3>Instant & Digital</h3>
+                <p>No more paper tickets. Get your pass delivered to your phone instantly after payment.</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-clock"></i>
+                <h3>Skip the Queues</h3>
+                <p>Buy your pass anytime, anywhere. No more waiting in long lines at the counter.</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-calendar-alt"></i>
+                <h3>All Pass Types</h3>
+                <p>From daily rides to monthly passes, we've got all your commuting needs covered.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="how-it-works-section">
+        <h2>Get Your Pass in 3 Easy Steps</h2>
+        <div class="how-it-works-grid">
+            <div class="how-it-works-step">
+                <i class="fas fa-map-marked-alt"></i>
+                <h3>1. Select Your Route</h3>
+                <p>Choose your start, destination, and the type of pass you need (daily, weekly, etc.).</p>
+            </div>
+            <div class="how-it-works-step">
+                <i class="fas fa-credit-card"></i>
+                <h3>2. Complete Payment</h3>
+                <p>Pay securely through our encrypted gateway using UPI, cards, or netbanking.</p>
+            </div>
+            <div class="how-it-works-step">
+                <i class="fas fa-mobile-alt"></i>
+                <h3>3. Travel Instantly</h3>
+                <p>Your digital pass is ready! Just show it on your phone and start your journey.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta-section">
+        <h2>Ready to Simplify Your Commute?</h2>
+        <p>Join thousands of happy commuters. Get your first pass today.</p>
+        <a href="pages/form.html" class="hero-cta">Get Started Now</a>
+    </section>
+
 
     <footer class="footer">
         <div class="footer-container">
