--- a/pages/payment.html
+++ b/pages/payment.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us – Click2Pass</title>
+    <title>Complete Payment – Click2Pass</title>
     <link rel="stylesheet" href="../css/style1.css" />
-    <link rel="stylesheet" href="../css/contact-style.css" />
+    <link rel="stylesheet" href="../css/payment-style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
@@ -18,10 +18,10 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="form.html">Apply Pass</a></li>
+                <li><a href="form.html" class="active">Apply Pass</a></li>
                 <li><a href="renew-pass.html">Renew Pass</a></li>
                 <li><a href="my-passes.html">My Passes</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-actions">
                 <a href="login.html" class="btn-login">Login</a>
@@ -30,33 +30,49 @@
     </nav>
 
     <div class="form-container">
-        <div class="form-card">
-            <h2 class="form-title">Get in Touch</h2>
-            <p class="form-subtitle">Have a question or feedback? Let us know!</p>
+        <div class="payment-card">
+            <h2 class="form-title">Complete Your Payment</h2>
+            <p class="form-subtitle">Review your order and select a payment method.</p>
 
-            <form action="#">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="name">Your Name</label>
-                        <input type="text" id="name" placeholder="Enter your name" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Your Email</label>
-                        <input type="email" id="email" placeholder="Enter your email" required />
-                    </div>
+            <div class="order-summary">
+                <h4>Order Summary</h4>
+                <div class="item">
+                    <span>Monthly Pass (General)</span>
+                    <strong>₹899.00</strong>
                 </div>
+                <div class="item">
+                    <span>Platform Fee</span>
+                    <strong>₹10.00</strong>
+                </div>
+                <div class="total">
+                    <span>Total Amount</span>
+                    <strong>₹909.00</strong>
+                </div>
+            </div>
 
+            <form action="success.html"> 
                 <div class="form-group">
-                    <label for="subject">Subject</label>
-                    <input type="text" id="subject" placeholder="What is this regarding?" required />
+                    <label>Choose Payment Method</label>
+                    <div class="payment-options">
+                        <label>
+                            <input type="radio" name="payment-method" value="upi" checked>
+                            <i class="fas fa-mobile-alt"></i>
+                            <strong>UPI</strong>
+                        </label>
+                        <label>
+                            <input type="radio" name="payment-method" value="card">
+                            <i class="fas fa-credit-card"></i>
+                            <strong>Credit / Debit Card</strong>
+                        </label>
+                        <label>
+                            <input type="radio" name="payment-method" value="netbanking">
+                            <i class="fas fa-university"></i>
+                            <strong>Netbanking</strong>
+                        </label>
+                    </div>
                 </div>
                 
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" placeholder="Write your message here..." required></textarea>
-                </div>
-
-                <button type="submit" class="btn-primary">Send Message</button>
+                <button type="submit" class="btn-primary">Pay ₹909.00</button>
             </form>
         </div>
     </div>
