--- a/pages/success.html
+++ b/pages/success.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us – Click2Pass</title>
+    <title>Payment Successful – Click2Pass</title>
     <link rel="stylesheet" href="../css/style1.css" />
-    <link rel="stylesheet" href="../css/contact-style.css" />
+    <link rel="stylesheet" href="../css/success-style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
@@ -18,10 +18,10 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="form.html">Apply Pass</a></li>
+                <li><a href="form.html" class="active">Apply Pass</a></li>
                 <li><a href="renew-pass.html">Renew Pass</a></li>
                 <li><a href="my-passes.html">My Passes</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-actions">
                 <a href="login.html" class="btn-login">Login</a>
@@ -30,34 +30,19 @@
     </nav>
 
     <div class="form-container">
-        <div class="form-card">
-            <h2 class="form-title">Get in Touch</h2>
-            <p class="form-subtitle">Have a question or feedback? Let us know!</p>
-
-            <form action="#">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="name">Your Name</label>
-                        <input type="text" id="name" placeholder="Enter your name" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Your Email</label>
-                        <input type="email" id="email" placeholder="Enter your email" required />
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="subject">Subject</label>
-                    <input type="text" id="subject" placeholder="What is this regarding?" required />
-                </div>
-                
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" placeholder="Write your message here..." required></textarea>
-                </div>
-
-                <button type="submit" class="btn-primary">Send Message</button>
-            </form>
+        <div class="success-card">
+            <div class="success-icon">
+                <i class="fas fa-check-circle"></i>
+            </div>
+            <h2 class="form-title">Payment Successful!</h2>
+            <p class="form-subtitle">
+                Your Monthly Pass (ID: P-1234567) has been generated successfully.
+                <br>
+                You can view it in the "My Passes" section.
+            </p>
+            
+            <a href="my-passes.html" class="btn-primary" style="margin-bottom: 1rem;">View My Passes</a>
+            <a href="#" class="btn-primary btn-secondary">Download Receipt</a>
         </div>
     </div>
 
