changed the code

--- a/index.html
+++ b/index.html
@@ -1,149 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Click2Pass – Instant Bus Passes & Tickets</title>
+
     <link rel="stylesheet" href="css/style1.css" />
     <link rel="stylesheet" href="css/index-style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-  </head>
-  <body>
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+</head>
+<body>
+
+   
     <nav class="top-navbar">
-      <div class="nav-container">
-        <div class="logo">
-          <h2>Click<span>2Pass</span></h2>
+        <div class="nav-container">
+            <div class="logo">
+                <h2>Click<span>2Pass</span></h2>
+            </div>
+
+            <ul class="nav-menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
+            </ul>
+
+         
+            <div class="nav-actions">
+                <a href="pages/signup.html" class="btn-login btn-signup">Sign Up</a>
+                <a href="pages/login.html" class="btn-login">Login</a>
+            </div>
         </div>
-        <ul class="nav-menu">
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="pages/form.html">Apply Pass</a></li>
-          <li><a href="pages/renew-pass.html">Renew Pass</a></li>
-          <li><a href="pages/my-passes.html">My Passes</a></li>
-          <li><a href="pages/contact.html">Contact</a></li>
-        </ul>
-        <div class="nav-actions">
-          <a href="pages/login.html" class="btn-login">Login</a>
-        </div>
-      </div>
     </nav>
 
     <div class="hero-section">
-      <div class="hero-content">
-        <h1>Seamless Travel. Instant Passes.</h1>
-        <p>
-          Get your daily, weekly, and monthly bus passes in just a few clicks.
-          Welcome to Click2Pass, your digital solution for easy commuting.
-        </p>
-        <a href="pages/form.html" class="hero-cta">Apply for Your Pass Now</a>
-      </div>
+        <div class="hero-content">
+            <h1>Seamless Travel. Instant Passes.</h1>
+            <p>
+                Get your daily, weekly, and monthly bus passes in just a few clicks.
+                Welcome to Click2Pass, your digital solution for easy commuting.
+            </p>
+            <a href="pages/login.html" class="hero-cta">Apply for Your Pass Now</a>
+        </div>
     </div>
 
+  
     <section class="features-section">
-      <h2>Why Choose Click2Pass?</h2>
-      <div class="features-grid">
-        <div class="feature-card">
-          <i class="fas fa-bolt"></i>
-          <h3>Instant & Digital</h3>
-          <p>
-            No more paper tickets. Get your pass delivered to your phone
-            instantly after payment.
-          </p>
+        <h2>Why Choose Click2Pass?</h2>
+        <div class="features-grid">
+            <div class="feature-card">
+                <i class="fas fa-bolt"></i>
+                <h3>Instant & Digital</h3>
+                <p>No more paper tickets. Get your pass delivered to your phone instantly.</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-clock"></i>
+                <h3>Skip the Queues</h3>
+                <p>Buy your pass anytime, anywhere. No more waiting in long lines.</p>
+            </div>
+            <div class="feature-card">
+                <i class="fas fa-calendar-alt"></i>
+                <h3>All Pass Types</h3>
+                <p>Daily, weekly, and monthly passes—all in one place.</p>
+            </div>
         </div>
-        <div class="feature-card">
-          <i class="fas fa-clock"></i>
-          <h3>Skip the Queues</h3>
-          <p>
-            Buy your pass anytime, anywhere. No more waiting in long lines at
-            the counter.
-          </p>
-        </div>
-        <div class="feature-card">
-          <i class="fas fa-calendar-alt"></i>
-          <h3>All Pass Types</h3>
-          <p>
-            From daily rides to monthly passes, we've got all your commuting
-            needs covered.
-          </p>
-        </div>
-      </div>
     </section>
 
+   
     <section class="how-it-works-section">
-      <h2>Get Your Pass in 3 Easy Steps</h2>
-      <div class="how-it-works-grid">
-        <div class="how-it-works-step">
-          <i class="fas fa-map-marked-alt"></i>
-          <h3>1. Select Your Route</h3>
-          <p>
-            Choose your start, destination, and the type of pass you need
-            (daily, weekly, etc.).
-          </p>
+        <h2>Get Your Pass in 3 Easy Steps</h2>
+        <div class="how-it-works-grid">
+            <div class="how-it-works-step">
+                <i class="fas fa-map-marked-alt"></i>
+                <h3>1. Select Your Route</h3>
+                <p>Choose your start, destination, and pass type.</p>
+            </div>
+            <div class="how-it-works-step">
+                <i class="fas fa-credit-card"></i>
+                <h3>2. Complete Payment</h3>
+                <p>Secure payments via UPI, cards, or net banking.</p>
+            </div>
+            <div class="how-it-works-step">
+                <i class="fas fa-mobile-alt"></i>
+                <h3>3. Travel Instantly</h3>
+                <p>Your digital pass is ready on your phone.</p>
+            </div>
         </div>
-        <div class="how-it-works-step">
-          <i class="fas fa-credit-card"></i>
-          <h3>2. Complete Payment</h3>
-          <p>
-            Pay securely through our encrypted gateway using UPI, cards, or
-            netbanking.
-          </p>
-        </div>
-        <div class="how-it-works-step">
-          <i class="fas fa-mobile-alt"></i>
-          <h3>3. Travel Instantly</h3>
-          <p>
-            Your digital pass is ready! Just show it on your phone and start
-            your journey.
-          </p>
-        </div>
-      </div>
     </section>
 
+  
     <section class="cta-section">
-      <h2>Ready to Simplify Your Commute?</h2>
-      <p>Join thousands of happy commuters. Get your first pass today.</p>
-      <a href="pages/form.html" class="hero-cta">Get Started Now</a>
+        <h2>Ready to Simplify Your Commute?</h2>
+        <p>Join thousands of happy commuters today.</p>
+        <a href="pages/signup.html" class="hero-cta">Create Your Account</a>
     </section>
 
+  
     <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-col">
-          <h3>Click<span>2Pass</span></h3>
-          <p>
-            Your trusted platform for instant bus passes and seamless commuting.
-          </p>
+        <div class="footer-container">
+            <div class="footer-col">
+                <h3>Click<span>2Pass</span></h3>
+                <p>Your trusted platform for instant bus passes.</p>
+            </div>
+
+            <div class="footer-col">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>Support</h4>
+                <ul>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>Contact</h4>
+                <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
+                <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
+            </div>
         </div>
-        <div class="footer-col">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-          </ul>
+
+        <div class="footer-bottom">
+            <p>© 2025 Click2Pass. All rights reserved.</p>
         </div>
-        <div class="footer-col">
-          <h4>Support</h4>
-          <ul>
-            <li><a href="#">Help Center</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>Contact</h4>
-          <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
-          <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>© 2025 Click2Pass. All rights reserved.</p>
-      </div>
     </footer>
-  </body>
+
+</body>
 </html>
