--- a/pages/renew-pass.html
+++ b/pages/renew-pass.html
@@ -1,120 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Renew Your Pass – Click2Pass</title>
+    <title>Renew Pass – Click2Pass</title>
+
     <link rel="stylesheet" href="../css/style1.css" />
-    <link rel="stylesheet" href="../css/renew-pass-style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-  </head>
-  <body>
-    <nav class="top-navbar">
-      <div class="nav-container">
+    <link rel="stylesheet" href="../css/form-style.css" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+</head>
+<body>
+
+<nav class="top-navbar">
+    <div class="nav-container">
         <div class="logo">
-          <h2>Click<span>2Pass</span></h2>
+            <h2>Click<span>2Pass</span></h2>
         </div>
         <ul class="nav-menu">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="form.html">Apply Pass</a></li>
-          <li><a href="renew-pass.html" class="active">Renew Pass</a></li>
-          <li><a href="my-passes.html">My Passes</a></li>
-          <li><a href="contact.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="form.html">Apply Pass</a></li>
+            <li><a href="renew-pass.html" class="active">Renew Pass</a></li>
+            <li><a href="my-passes.html">My Passes</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="nav-actions">
-          <a href="login.html" class="btn-login">Login</a>
-        </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="form-container">
-      <div class="form-card">
+<div class="form-container">
+    <div class="form-card">
+
         <h2 class="form-title">Renew Your Pass</h2>
-        <p class="form-subtitle">Extend your pass duration quickly.</p>
+        <p class="form-subtitle">Extend your pass validity in just one step.</p>
 
         <form action="payment.html">
-          <div class="form-group">
-            <label for="pass-id">Pass ID</label>
-            <input
-              type="text"
-              id="pass-id"
-              placeholder="Enter your Pass ID (e.g., P-1234567)"
-              required
-            />
-          </div>
 
-          <div class="form-group">
-            <label>Select Renewal Duration</label>
-            <div class="radio-group">
-              <label
-                ><input type="radio" name="pass-type" value="daily" /> Daily
-                (₹49)</label
-              >
-              <label
-                ><input type="radio" name="pass-type" value="weekly" /> Weekly
-                (₹299)</label
-              >
-              <label
-                ><input type="radio" name="pass-type" value="monthly" checked />
-                Monthly (₹899)</label
-              >
+            <div class="form-group">
+                <label for="pass-id">Pass ID</label>
+                <input
+                    type="text"
+                    id="pass-id"
+                    value="P-10021"
+                    readonly
+                />
             </div>
-          </div>
 
-          <div class="form-group">
-            <div class="checkbox-group">
-              <label
-                ><input type="checkbox" name="auto-renew" /> Enable Auto-Renew
-                for next time</label
-              >
+            <div class="form-row">
+                <div class="form-group">
+                    <label>Current Valid From</label>
+                    <input type="text" value="01 Nov 2025" readonly />
+                </div>
+                <div class="form-group">
+                    <label>Current Valid Till</label>
+                    <input type="text" value="30 Nov 2025" readonly />
+                </div>
             </div>
-          </div>
 
-          <button type="submit" class="btn-primary">Proceed to Payment</button>
+            <div class="form-group">
+                <label>Select Pass Amount</label>
+                <div class="radio-group">
+                    <label>
+                        <input type="radio" name="pass_type" value="1000" checked>
+                        Monthly Pass – ₹1000
+                    </label>
+                    <label>
+                        <input type="radio" name="pass_type" value="2000">
+                        Premium Pass – ₹2000
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="new-from">New Valid From</label>
+                    <input type="date" id="new-from" required />
+                </div>
+                <div class="form-group">
+                    <label for="new-till">New Valid Till</label>
+                    <input type="date" id="new-till" required />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="checkbox-group">
+                    <label>
+                        <input type="checkbox" name="auto_renew">
+                        Enable auto-renew for future
+                    </label>
+                </div>
+            </div>
+
+            <button type="submit" class="btn-primary">
+                Proceed to Payment
+            </button>
+
         </form>
-      </div>
+    </div>
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-col">
+            <h3>Click<span>2Pass</span></h3>
+            <p>Your trusted platform for instant bus passes and seamless commuting.</p>
+        </div>
+
+        <div class="footer-col">
+            <h4>Quick Links</h4>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-col">
+            <h4>Support</h4>
+            <ul>
+                <li><a href="#">Help Center</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-col">
+            <h4>Contact</h4>
+            <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
+            <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
+        </div>
     </div>
 
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-col">
-          <h3>Click<span>2Pass</span></h3>
-          <p>
-            Your trusted platform for instant bus passes and seamless commuting.
-          </p>
-        </div>
-        <div class="footer-col">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>Support</h4>
-          <ul>
-            <li><a href="#">Help Center</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>Contact</h4>
-          <p><i class="fas fa-envelope"></i> support@click2pass.com</p>
-          <p><i class="fas fa-phone"></i> +91 1800-123-4567</p>
-        </div>
-      </div>
-      <div class="footer-bottom">
+    <div class="footer-bottom">
         <p>© 2025 Click2Pass. All rights reserved.</p>
-      </div>
-    </footer>
-  </body>
+    </div>
+</footer>
+
+</body>
 </html>
