--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,9 +18,9 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="form.html">Apply Pass</a></li>
+                <!-- <li><a href="form.html">Apply Pass</a></li>
                 <li><a href="renew-pass.html">Renew Pass</a></li>
-                <li><a href="my-passes.html">My Passes</a></li>
+                <li><a href="my-passes.html">My Passes</a></li> -->
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
 
