--- a/pages/my-passes.html
+++ b/pages/my-passes.html
@@ -44,9 +44,7 @@
 
                     <h3>Monthly Pass (₹1000)</h3>
 
-                    <p class="route">
-                        Aadhaar: XXXX XXXX 3456
-                    </p>
+
 
                     <div class="details">
                         <div>
@@ -65,11 +63,11 @@
                         </a>
                     </div>
                 </div>
-
+<!-- 
                 <div class="ticket-qr">
                     <i class="fas fa-qrcode qr-code"></i>
                     <span class="pass-id">P-10021</span>
-                </div>
+                </div> -->
             </div>
 
 
@@ -78,9 +76,6 @@
 
                     <h3>Premium Pass (₹2000)</h3>
 
-                    <p class="route">
-                        Aadhaar: XXXX XXXX 7890
-                    </p>
 
                     <div class="details">
                         <div>
@@ -100,44 +95,7 @@
                     </div>
                 </div>
 
-                <div class="ticket-qr">
-                    <i class="fas fa-qrcode qr-code"></i>
-                    <span class="pass-id">P-10045</span>
-                </div>
-            </div>
-        </section>
-
-        <section class="expired-passes-section">
-            <h2 class="section-title">Expired Passes</h2>
-
-            <div class="ticket-card expired">
-                <div class="ticket-main">
-
-                    <h3>Monthly Pass (₹1000)</h3>
-
-                    <p class="route">
-                        Aadhaar: XXXX XXXX 1122
-                    </p>
-
-                    <div class="details">
-                        <div>
-                            <p>Expired On</p>
-                            <strong>31 Oct 2025</strong>
-                        </div>
-                    </div>
-
-                    <div class="ticket-actions">
-                        <a href="renew-pass.html?pass_id=9987" class="btn-renew">
-                            Renew Pass
-                        </a>
-                    </div>
-                </div>
-
-                <div class="ticket-qr">
-                    <i class="fas fa-qrcode qr-code"></i>
-                    <span class="pass-id">P-9987</span>
-                </div>
-            </div>
+              </div>
         </section>
 
     </main>
