--- a/pages/success.html
+++ b/pages/success.html
@@ -33,7 +33,7 @@
             <div class="success-icon">
                 <i class="fas fa-check-circle"></i>
             </div>
-            <h2 class="form-title">Payment Successful!</h2>
+            <h2 class="form-title">Pass Applied Successfully</h2>
             <p class="form-subtitle">
                 Your Monthly Pass (ID: P-1234567) has been generated successfully.
                 <br>
@@ -41,7 +41,7 @@
             </p>
             
             <a href="my-passes.html" class="btn-primary" style="margin-bottom: 1rem;">View My Passes</a>
-            <a href="#" class="btn-primary btn-secondary">Download Receipt</a>
+            <!-- <a href="#" class="btn-primary btn-secondary">Download Receipt</a> -->
         </div>
     </div>
 
