--- a/pages/login.html
+++ b/pages/login.html
@@ -34,13 +34,13 @@
             <p class="form-subtitle">Enter your details to get started.</p>
 
             <form action="../pages/form.html"> <div class="form-group">
-                    <label for="email-phone">Email / Phone Number</label>
-                    <input type="text" id="email-phone" placeholder="e.g., name@example.com or 9876543210" required />
+                    <label for="email-phone">Enter Email</label>
+                    <input type="text" id="email-phone" placeholder="e.g., name@example.com" required />
                 </div>
                 
                 <div class="form-group">
-                    <label for="otp">Enter OTP</label>
-                    <input type="text" id="otp" placeholder="Enter 6-digit OTP" required />
+                    <label for="otp">Enter Password</label>
+                    <input type="text" id="otp" placeholder="Password" required />
                 </div>
 
                 <button type="submit" class="btn-primary">Verify & Login</button>
