changes in index

--- a/pages/login.html
+++ b/pages/login.html
@@ -30,7 +30,7 @@
 
     <div class="form-container">
         <div class="login-card">
-            <h2 class="form-title">Login or Sign Up</h2>
+            <h2 class="form-title">Login</h2>
             <p class="form-subtitle">Enter your details to get started.</p>
 
             <form action="../pages/form.html"> <div class="form-group">
